--- a/TheoInf/pom.xml
+++ b/TheoInf/pom.xml
@@ -19,9 +19,9 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>org.jgrapht</groupId>
-			<artifactId>jgrapht-core</artifactId>
-			<version>0.9.1</version>
+			<groupId>jgrapht</groupId>
+			<artifactId>jgrapht</artifactId>
+			<version>0.7.3</version>
 		</dependency>
 		<dependency>
 			<groupId>jgraph</groupId>
