Visualize graph, diplay edge relation and weight

--- a/TheoInf/pom.xml
+++ b/TheoInf/pom.xml
@@ -19,9 +19,9 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>jgrapht</groupId>
+			<groupId>net.sf.jgrapht</groupId>
 			<artifactId>jgrapht</artifactId>
-			<version>0.7.3</version>
+			<version>0.8.3</version>
 		</dependency>
 		<dependency>
 			<groupId>jgraph</groupId>
